--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>0xvh</title>
-    <link rel="icon" href="assets/fbi.png" type="image/png">
+    <link rel="icon" href="assets/fbi.jpg" type="image/jpg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jersey+10&display=swap" rel="stylesheet">
@@ -57,12 +57,12 @@
             </div>
         </div>
     </div>
-    <!-- Popup Container -->
+   
     <div id="popup-container">
         <div id="popup-text"></div>
     </div>
     <audio loop="true" id="audio">
-        <source src="assets/music.mp3" type="audio/mpeg">
+        <source src="assets/Sonic Mine - Drugs.mp3" type="audio/mp3">
     </audio>
     <script src="JS/clock.js"></script>
     <script src="JS/cursor.js"></script>
